Trabalho 4 - Compilador Mini Javascript com Funcoes/y.output
Terminals unused in grammar

    COMENTARIO


State 150 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDz

    2 CMDz: CMD CMDz
    3     | %empty

    4 CMDs: CMD CMDs
    5     | CMD

    6 CMD: CMD_DECL ';'
    7    | CMD_IF
    8    | CMD_FOR
    9    | CMD_WHILE
   10    | CMD_FUNCTION
   11    | CMD_RETURN
   12    | ';'
   13    | EXPR ';'
   14    | EXPR ASM ';'
   15    | ATRIB ';'
   16    | BLOCO

   17 CMD_RETURN: RETURN RVALUE ';'

   18 $@1: %empty

   19 $@2: %empty

   20 CMD_FUNCTION: FUNCTION ID '(' $@1 ')' '{' CMDz '}' $@2

   21 $@3: %empty

   22 $@4: %empty

   23 CMD_FUNCTION: FUNCTION ID '(' $@3 PARAMS ')' '{' CMDz '}' $@4

   24 PARAMS: PARAMS ',' ID
   25       | ID

   26 CMD_IF: IF '(' RVALUE ')' CMD
   27       | IF '(' RVALUE ')' CMD ELSE CMD

   28 CMD_WHILE: WHILE '(' RVALUE ')' CMD

   29 CMD_FOR: FOR '(' CMD_DECL ';' RVALUE ';' ATRIB ')' CMD
   30        | FOR '(' ATRIB ';' RVALUE ';' ATRIB ')' CMD

   31 LVALUE: ID

   32 LVALUEPROP: EXPR '.' ID
   33           | EXPR '[' RVALUE ']'

   34 RVALUE: ATRIB
   35       | EXPR
   36       | '{' '}'

   37 EXPR: EXPR MEIG EXPR
   38     | EXPR MAIG EXPR
   39     | EXPR IG EXPR
   40     | EXPR DIF EXPR
   41     | EXPR '^' EXPR
   42     | EXPR '<' EXPR
   43     | EXPR '>' EXPR
   44     | EXPR '*' EXPR
   45     | EXPR '+' EXPR
   46     | EXPR '-' EXPR
   47     | EXPR '/' EXPR
   48     | EXPR '%' EXPR
   49     | LVALUE INCREM
   50     | LVALUE DECREM
   51     | '+' EXPR
   52     | '-' EXPR
   53     | FINAL
   54     | FINAL '(' ')'
   55     | FINAL '(' ARGS ')'

   56 CMD_DECL: CMD_LET
   57         | CMD_VAR
   58         | CMD_CONST

   59 CMD_LET: LET MULTI_LET

   60 MULTI_LET: ID '=' RVALUE ',' MULTI_LET
   61          | ID '=' RVALUE
   62          | ID ',' MULTI_LET
   63          | ID

   64 CMD_VAR: VAR MULTI_VAR

   65 MULTI_VAR: ID '=' RVALUE ',' MULTI_VAR
   66          | ID '=' RVALUE
   67          | ID ',' MULTI_VAR
   68          | ID

   69 CMD_CONST: CONST MULTI_CONST

   70 MULTI_CONST: ID '=' RVALUE ',' MULTI_CONST
   71            | ID '=' RVALUE
   72            | ID ',' MULTI_CONST
   73            | ID

   74 ATRIB: LVALUE '=' RVALUE
   75      | LVALUE MAATR RVALUE
   76      | LVALUE MEATR RVALUE
   77      | LVALUEPROP '=' RVALUE
   78      | LVALUEPROP MAATR RVALUE
   79      | LVALUEPROP MEATR RVALUE

   80 FINAL: NUM
   81      | STRING
   82      | '[' ']'
   83      | '(' RVALUE ')'
   84      | LVALUE
   85      | LVALUEPROP
   86      | TRUE
   87      | FALSE

   88 ARGS: RVALUE ',' ARGS
   89     | RVALUE

   90 $@5: %empty

   91 $@6: %empty

   92 BLOCO: '{' $@5 CMDs $@6 '}'
   93      | '{' '}'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 48
    '(' (40) 20 23 26 27 28 29 30 54 55 83
    ')' (41) 20 23 26 27 28 29 30 54 55 83
    '*' (42) 44
    '+' (43) 45 51
    ',' (44) 24 60 62 65 67 70 72 88
    '-' (45) 46 52
    '.' (46) 32
    '/' (47) 47
    ';' (59) 6 12 13 14 15 17 29 30
    '<' (60) 42
    '=' (61) 60 61 65 66 70 71 74 77
    '>' (62) 43
    '[' (91) 33 82
    ']' (93) 33 82
    '^' (94) 41
    '{' (123) 20 23 36 92 93
    '}' (125) 20 23 36 92 93
    error (256)
    ID (258) 20 23 24 25 31 32 60 61 62 63 65 66 67 68 70 71 72 73
    NUM (259) 80
    MAIG (260) 38
    MEIG (261) 37
    IG (262) 39
    DIF (263) 40
    MAATR (264) 75 78
    MEATR (265) 76 79
    INCREM (266) 49
    DECREM (267) 50
    STRING (268) 81
    COMENTARIO (269)
    LET (270) 59
    CONST (271) 69
    VAR (272) 64
    IF (273) 26 27
    ELSE (274) 27
    WHILE (275) 28
    FOR (276) 29 30
    FUNCTION (277) 20 23
    RETURN (278) 17
    ASM (279) 14
    TRUE (280) 86
    FALSE (281) 87


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    S (46)
        on left: 1
        on right: 0
    CMDz (47)
        on left: 2 3
        on right: 1 2 20 23
    CMDs (48)
        on left: 4 5
        on right: 4 92
    CMD (49)
        on left: 6 7 8 9 10 11 12 13 14 15 16
        on right: 2 4 5 26 27 28 29 30
    CMD_RETURN (50)
        on left: 17
        on right: 11
    CMD_FUNCTION (51)
        on left: 20 23
        on right: 10
    $@1 (52)
        on left: 18
        on right: 20
    $@2 (53)
        on left: 19
        on right: 20
    $@3 (54)
        on left: 21
        on right: 23
    $@4 (55)
        on left: 22
        on right: 23
    PARAMS (56)
        on left: 24 25
        on right: 23 24
    CMD_IF (57)
        on left: 26 27
        on right: 7
    CMD_WHILE (58)
        on left: 28
        on right: 9
    CMD_FOR (59)
        on left: 29 30
        on right: 8
    LVALUE (60)
        on left: 31
        on right: 49 50 74 75 76 84
    LVALUEPROP (61)
        on left: 32 33
        on right: 77 78 79 85
    RVALUE (62)
        on left: 34 35 36
        on right: 17 26 27 28 29 30 33 60 61 65 66 70 71 74 75 76 77 78 79 83 88 89
    EXPR (63)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 13 14 32 33 35 37 38 39 40 41 42 43 44 45 46 47 48 51 52
    CMD_DECL (64)
        on left: 56 57 58
        on right: 6 29
    CMD_LET (65)
        on left: 59
        on right: 56
    MULTI_LET (66)
        on left: 60 61 62 63
        on right: 59 60 62
    CMD_VAR (67)
        on left: 64
        on right: 57
    MULTI_VAR (68)
        on left: 65 66 67 68
        on right: 64 65 67
    CMD_CONST (69)
        on left: 69
        on right: 58
    MULTI_CONST (70)
        on left: 70 71 72 73
        on right: 69 70 72
    ATRIB (71)
        on left: 74 75 76 77 78 79
        on right: 15 29 30 34
    FINAL (72)
        on left: 80 81 82 83 84 85 86 87
        on right: 53 54 55
    ARGS (73)
        on left: 88 89
        on right: 55 88
    BLOCO (74)
        on left: 92 93
        on right: 16
    $@5 (75)
        on left: 90
        on right: 92
    $@6 (76)
        on left: 91
        on right: 92


State 0

    0 $accept: . S $end

    ID        shift, and go to state 1
    NUM       shift, and go to state 2
    STRING    shift, and go to state 3
    LET       shift, and go to state 4
    CONST     shift, and go to state 5
    VAR       shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    RETURN    shift, and go to state 11
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    '+'       shift, and go to state 14
    '-'       shift, and go to state 15
    '['       shift, and go to state 16
    ';'       shift, and go to state 17
    '('       shift, and go to state 18
    '{'       shift, and go to state 19

    $default  reduce using rule 3 (CMDz)

    S             go to state 20
    CMDz          go to state 21
    CMD           go to state 22
    CMD_RETURN    go to state 23
    CMD_FUNCTION  go to state 24
    CMD_IF        go to state 25
    CMD_WHILE     go to state 26
    CMD_FOR       go to state 27
    LVALUE        go to state 28
    LVALUEPROP    go to state 29
    EXPR          go to state 30
    CMD_DECL      go to state 31
    CMD_LET       go to state 32
    CMD_VAR       go to state 33
    CMD_CONST     go to state 34
    ATRIB         go to state 35
    FINAL         go to state 36
    BLOCO         go to state 37


State 1

   31 LVALUE: ID .

    $default  reduce using rule 31 (LVALUE)


State 2

   80 FINAL: NUM .

    $default  reduce using rule 80 (FINAL)


State 3

   81 FINAL: STRING .

    $default  reduce using rule 81 (FINAL)


State 4

   59 CMD_LET: LET . MULTI_LET

    ID  shift, and go to state 38

    MULTI_LET  go to state 39


State 5

   69 CMD_CONST: CONST . MULTI_CONST

    ID  shift, and go to state 40

    MULTI_CONST  go to state 41


State 6

   64 CMD_VAR: VAR . MULTI_VAR

    ID  shift, and go to state 42

    MULTI_VAR  go to state 43


State 7

   26 CMD_IF: IF . '(' RVALUE ')' CMD
   27       | IF . '(' RVALUE ')' CMD ELSE CMD

    '('  shift, and go to state 44


State 8

   28 CMD_WHILE: WHILE . '(' RVALUE ')' CMD

    '('  shift, and go to state 45


State 9

   29 CMD_FOR: FOR . '(' CMD_DECL ';' RVALUE ';' ATRIB ')' CMD
   30        | FOR . '(' ATRIB ';' RVALUE ';' ATRIB ')' CMD

    '('  shift, and go to state 46


State 10

   20 CMD_FUNCTION: FUNCTION . ID '(' $@1 ')' '{' CMDz '}' $@2
   23             | FUNCTION . ID '(' $@3 PARAMS ')' '{' CMDz '}' $@4

    ID  shift, and go to state 47


State 11

   17 CMD_RETURN: RETURN . RVALUE ';'

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 49
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 12

   86 FINAL: TRUE .

    $default  reduce using rule 86 (FINAL)


State 13

   87 FINAL: FALSE .

    $default  reduce using rule 87 (FINAL)


State 14

   51 EXPR: '+' . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 54
    FINAL       go to state 36


State 15

   52 EXPR: '-' . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 55
    FINAL       go to state 36


State 16

   82 FINAL: '[' . ']'

    ']'  shift, and go to state 56


State 17

   12 CMD: ';' .

    $default  reduce using rule 12 (CMD)


State 18

   83 FINAL: '(' . RVALUE ')'

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 57
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 19

   92 BLOCO: '{' . $@5 CMDs $@6 '}'
   93      | '{' . '}'

    '}'  shift, and go to state 58

    $default  reduce using rule 90 ($@5)

    $@5  go to state 59


State 20

    0 $accept: S . $end

    $end  shift, and go to state 60


State 21

    1 S: CMDz .

    $default  reduce using rule 1 (S)


State 22

    2 CMDz: CMD . CMDz

    ID        shift, and go to state 1
    NUM       shift, and go to state 2
    STRING    shift, and go to state 3
    LET       shift, and go to state 4
    CONST     shift, and go to state 5
    VAR       shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    RETURN    shift, and go to state 11
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    '+'       shift, and go to state 14
    '-'       shift, and go to state 15
    '['       shift, and go to state 16
    ';'       shift, and go to state 17
    '('       shift, and go to state 18
    '{'       shift, and go to state 19

    $default  reduce using rule 3 (CMDz)

    CMDz          go to state 61
    CMD           go to state 22
    CMD_RETURN    go to state 23
    CMD_FUNCTION  go to state 24
    CMD_IF        go to state 25
    CMD_WHILE     go to state 26
    CMD_FOR       go to state 27
    LVALUE        go to state 28
    LVALUEPROP    go to state 29
    EXPR          go to state 30
    CMD_DECL      go to state 31
    CMD_LET       go to state 32
    CMD_VAR       go to state 33
    CMD_CONST     go to state 34
    ATRIB         go to state 35
    FINAL         go to state 36
    BLOCO         go to state 37


State 23

   11 CMD: CMD_RETURN .

    $default  reduce using rule 11 (CMD)


State 24

   10 CMD: CMD_FUNCTION .

    $default  reduce using rule 10 (CMD)


State 25

    7 CMD: CMD_IF .

    $default  reduce using rule 7 (CMD)


State 26

    9 CMD: CMD_WHILE .

    $default  reduce using rule 9 (CMD)


State 27

    8 CMD: CMD_FOR .

    $default  reduce using rule 8 (CMD)


State 28

   49 EXPR: LVALUE . INCREM
   50     | LVALUE . DECREM
   74 ATRIB: LVALUE . '=' RVALUE
   75      | LVALUE . MAATR RVALUE
   76      | LVALUE . MEATR RVALUE
   84 FINAL: LVALUE .

    MAATR   shift, and go to state 62
    MEATR   shift, and go to state 63
    INCREM  shift, and go to state 64
    DECREM  shift, and go to state 65
    '='     shift, and go to state 66

    $default  reduce using rule 84 (FINAL)


State 29

   77 ATRIB: LVALUEPROP . '=' RVALUE
   78      | LVALUEPROP . MAATR RVALUE
   79      | LVALUEPROP . MEATR RVALUE
   85 FINAL: LVALUEPROP .

    MAATR  shift, and go to state 67
    MEATR  shift, and go to state 68
    '='    shift, and go to state 69

    $default  reduce using rule 85 (FINAL)


State 30

   13 CMD: EXPR . ';'
   14    | EXPR . ASM ';'
   32 LVALUEPROP: EXPR . '.' ID
   33           | EXPR . '[' RVALUE ']'
   37 EXPR: EXPR . MEIG EXPR
   38     | EXPR . MAIG EXPR
   39     | EXPR . IG EXPR
   40     | EXPR . DIF EXPR
   41     | EXPR . '^' EXPR
   42     | EXPR . '<' EXPR
   43     | EXPR . '>' EXPR
   44     | EXPR . '*' EXPR
   45     | EXPR . '+' EXPR
   46     | EXPR . '-' EXPR
   47     | EXPR . '/' EXPR
   48     | EXPR . '%' EXPR

    MAIG  shift, and go to state 70
    MEIG  shift, and go to state 71
    IG    shift, and go to state 72
    DIF   shift, and go to state 73
    ASM   shift, and go to state 74
    '<'   shift, and go to state 75
    '>'   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '%'   shift, and go to state 81
    '^'   shift, and go to state 82
    '.'   shift, and go to state 83
    '['   shift, and go to state 84
    ';'   shift, and go to state 85


State 31

    6 CMD: CMD_DECL . ';'

    ';'  shift, and go to state 86


State 32

   56 CMD_DECL: CMD_LET .

    $default  reduce using rule 56 (CMD_DECL)


State 33

   57 CMD_DECL: CMD_VAR .

    $default  reduce using rule 57 (CMD_DECL)


State 34

   58 CMD_DECL: CMD_CONST .

    $default  reduce using rule 58 (CMD_DECL)


State 35

   15 CMD: ATRIB . ';'

    ';'  shift, and go to state 87


State 36

   53 EXPR: FINAL .
   54     | FINAL . '(' ')'
   55     | FINAL . '(' ARGS ')'

    '('  shift, and go to state 88

    $default  reduce using rule 53 (EXPR)


State 37

   16 CMD: BLOCO .

    $default  reduce using rule 16 (CMD)


State 38

   60 MULTI_LET: ID . '=' RVALUE ',' MULTI_LET
   61          | ID . '=' RVALUE
   62          | ID . ',' MULTI_LET
   63          | ID .

    '='  shift, and go to state 89
    ','  shift, and go to state 90

    $default  reduce using rule 63 (MULTI_LET)


State 39

   59 CMD_LET: LET MULTI_LET .

    $default  reduce using rule 59 (CMD_LET)


State 40

   70 MULTI_CONST: ID . '=' RVALUE ',' MULTI_CONST
   71            | ID . '=' RVALUE
   72            | ID . ',' MULTI_CONST
   73            | ID .

    '='  shift, and go to state 91
    ','  shift, and go to state 92

    $default  reduce using rule 73 (MULTI_CONST)


State 41

   69 CMD_CONST: CONST MULTI_CONST .

    $default  reduce using rule 69 (CMD_CONST)


State 42

   65 MULTI_VAR: ID . '=' RVALUE ',' MULTI_VAR
   66          | ID . '=' RVALUE
   67          | ID . ',' MULTI_VAR
   68          | ID .

    '='  shift, and go to state 93
    ','  shift, and go to state 94

    $default  reduce using rule 68 (MULTI_VAR)


State 43

   64 CMD_VAR: VAR MULTI_VAR .

    $default  reduce using rule 64 (CMD_VAR)


State 44

   26 CMD_IF: IF '(' . RVALUE ')' CMD
   27       | IF '(' . RVALUE ')' CMD ELSE CMD

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 95
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 45

   28 CMD_WHILE: WHILE '(' . RVALUE ')' CMD

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 96
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 46

   29 CMD_FOR: FOR '(' . CMD_DECL ';' RVALUE ';' ATRIB ')' CMD
   30        | FOR '(' . ATRIB ';' RVALUE ';' ATRIB ')' CMD

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    LET     shift, and go to state 4
    CONST   shift, and go to state 5
    VAR     shift, and go to state 6
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    EXPR        go to state 97
    CMD_DECL    go to state 98
    CMD_LET     go to state 32
    CMD_VAR     go to state 33
    CMD_CONST   go to state 34
    ATRIB       go to state 99
    FINAL       go to state 36


State 47

   20 CMD_FUNCTION: FUNCTION ID . '(' $@1 ')' '{' CMDz '}' $@2
   23             | FUNCTION ID . '(' $@3 PARAMS ')' '{' CMDz '}' $@4

    '('  shift, and go to state 100


State 48

   36 RVALUE: '{' . '}'

    '}'  shift, and go to state 101


State 49

   17 CMD_RETURN: RETURN RVALUE . ';'

    ';'  shift, and go to state 102


State 50

   32 LVALUEPROP: EXPR . '.' ID
   33           | EXPR . '[' RVALUE ']'
   35 RVALUE: EXPR .
   37 EXPR: EXPR . MEIG EXPR
   38     | EXPR . MAIG EXPR
   39     | EXPR . IG EXPR
   40     | EXPR . DIF EXPR
   41     | EXPR . '^' EXPR
   42     | EXPR . '<' EXPR
   43     | EXPR . '>' EXPR
   44     | EXPR . '*' EXPR
   45     | EXPR . '+' EXPR
   46     | EXPR . '-' EXPR
   47     | EXPR . '/' EXPR
   48     | EXPR . '%' EXPR

    MAIG  shift, and go to state 70
    MEIG  shift, and go to state 71
    IG    shift, and go to state 72
    DIF   shift, and go to state 73
    '<'   shift, and go to state 75
    '>'   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '%'   shift, and go to state 81
    '^'   shift, and go to state 82
    '.'   shift, and go to state 83
    '['   shift, and go to state 84

    $default  reduce using rule 35 (RVALUE)


State 51

   34 RVALUE: ATRIB .

    $default  reduce using rule 34 (RVALUE)


State 52

   49 EXPR: LVALUE . INCREM
   50     | LVALUE . DECREM
   84 FINAL: LVALUE .

    INCREM  shift, and go to state 64
    DECREM  shift, and go to state 65

    $default  reduce using rule 84 (FINAL)


State 53

   85 FINAL: LVALUEPROP .

    $default  reduce using rule 85 (FINAL)


State 54

   32 LVALUEPROP: EXPR . '.' ID
   33           | EXPR . '[' RVALUE ']'
   37 EXPR: EXPR . MEIG EXPR
   38     | EXPR . MAIG EXPR
   39     | EXPR . IG EXPR
   40     | EXPR . DIF EXPR
   41     | EXPR . '^' EXPR
   42     | EXPR . '<' EXPR
   43     | EXPR . '>' EXPR
   44     | EXPR . '*' EXPR
   45     | EXPR . '+' EXPR
   46     | EXPR . '-' EXPR
   47     | EXPR . '/' EXPR
   48     | EXPR . '%' EXPR
   51     | '+' EXPR .

    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81
    '^'  shift, and go to state 82
    '.'  shift, and go to state 83
    '['  shift, and go to state 84

    $default  reduce using rule 51 (EXPR)


State 55

   32 LVALUEPROP: EXPR . '.' ID
   33           | EXPR . '[' RVALUE ']'
   37 EXPR: EXPR . MEIG EXPR
   38     | EXPR . MAIG EXPR
   39     | EXPR . IG EXPR
   40     | EXPR . DIF EXPR
   41     | EXPR . '^' EXPR
   42     | EXPR . '<' EXPR
   43     | EXPR . '>' EXPR
   44     | EXPR . '*' EXPR
   45     | EXPR . '+' EXPR
   46     | EXPR . '-' EXPR
   47     | EXPR . '/' EXPR
   48     | EXPR . '%' EXPR
   52     | '-' EXPR .

    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81
    '^'  shift, and go to state 82
    '.'  shift, and go to state 83
    '['  shift, and go to state 84

    $default  reduce using rule 52 (EXPR)


State 56

   82 FINAL: '[' ']' .

    $default  reduce using rule 82 (FINAL)


State 57

   83 FINAL: '(' RVALUE . ')'

    ')'  shift, and go to state 103


State 58

   93 BLOCO: '{' '}' .

    $default  reduce using rule 93 (BLOCO)


State 59

   92 BLOCO: '{' $@5 . CMDs $@6 '}'

    ID        shift, and go to state 1
    NUM       shift, and go to state 2
    STRING    shift, and go to state 3
    LET       shift, and go to state 4
    CONST     shift, and go to state 5
    VAR       shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    FOR       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    RETURN    shift, and go to state 11
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    '+'       shift, and go to state 14
    '-'       shift, and go to state 15
    '['       shift, and go to state 16
    ';'       shift, and go to state 17
    '('       shift, and go to state 18
    '{'       shift, and go to state 19

    CMDs          go to state 104
    CMD           go to state 105
    CMD_RETURN    go to state 23
    CMD_FUNCTION  go to state 24
    CMD_IF        go to state 25
    CMD_WHILE     go to state 26
    CMD_FOR       go to state 27
    LVALUE        go to state 28
    LVALUEPROP    go to state 29
    EXPR          go to state 30
    CMD_DECL      go to state 31
    CMD_LET       go to state 32
    CMD_VAR       go to state 33
    CMD_CONST     go to state 34
    ATRIB         go to state 35
    FINAL         go to state 36
    BLOCO         go to state 37


State 60

    0 $accept: S $end .

    $default  accept


State 61

    2 CMDz: CMD CMDz .

    $default  reduce using rule 2 (CMDz)


State 62

   75 ATRIB: LVALUE MAATR . RVALUE

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 106
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 63

   76 ATRIB: LVALUE MEATR . RVALUE

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 107
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 64

   49 EXPR: LVALUE INCREM .

    $default  reduce using rule 49 (EXPR)


State 65

   50 EXPR: LVALUE DECREM .

    $default  reduce using rule 50 (EXPR)


State 66

   74 ATRIB: LVALUE '=' . RVALUE

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 108
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 67

   78 ATRIB: LVALUEPROP MAATR . RVALUE

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 109
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 68

   79 ATRIB: LVALUEPROP MEATR . RVALUE

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 110
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 69

   77 ATRIB: LVALUEPROP '=' . RVALUE

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18
    '{'     shift, and go to state 48

    LVALUE      go to state 28
    LVALUEPROP  go to state 29
    RVALUE      go to state 111
    EXPR        go to state 50
    ATRIB       go to state 51
    FINAL       go to state 36


State 70

   38 EXPR: EXPR MAIG . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 112
    FINAL       go to state 36


State 71

   37 EXPR: EXPR MEIG . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 113
    FINAL       go to state 36


State 72

   39 EXPR: EXPR IG . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 114
    FINAL       go to state 36


State 73

   40 EXPR: EXPR DIF . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 115
    FINAL       go to state 36


State 74

   14 CMD: EXPR ASM . ';'

    ';'  shift, and go to state 116


State 75

   42 EXPR: EXPR '<' . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 117
    FINAL       go to state 36


State 76

   43 EXPR: EXPR '>' . EXPR

    ID      shift, and go to state 1
    NUM     shift, and go to state 2
    STRING  shift, and go to state 3
    TRUE    shift, and go to state 12
    FALSE   shift, and go to state 13
    '+'     shift, and go to state 14
    '-'     shift, and go to state 15
    '['     shift, and go to state 16
    '('     shift, and go to state 18

    LVALUE      go to state 52
    LVALUEPROP  go to state 53
    EXPR        go to state 118
    FINAL       go to state 36


State 77

   45 EXPR: EXPR '+' . EXPR
